--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Copyright 2010, Kai Chang
 
 Data visualization prototyping with RaphaelJS and CoffeeScript
 
-Example at: http://connectshapes.com/raffi/
+Example at: http://fleetinbeing.net/raffi/
